# bitter

./: meson.build
protocol/: meson.build
src/: bitter.h  input_device.c  keyboard.c  main.c  meson.build  node.c  output.c  server.c  view.c  xdg_shell.c
